Offline3/CSE 310 Assignment3/DemoCodes/simplecalc/y.output
Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input line

    3 line: NEWLINE
    4     | expr NEWLINE

    5 expr: expr PLUS term
    6     | expr MINUS term
    7     | term

    8 term: term ASTERISK factor
    9     | term SLASH factor
   10     | factor

   11 factor: LPAREN expr RPAREN
   12       | NUMBER


Terminals, with rules where they appear

$end (0) 0
error (256)
NEWLINE (258) 3 4
NUMBER (259) 12
PLUS (260) 5
MINUS (261) 6
SLASH (262) 9
ASTERISK (263) 8
LPAREN (264) 11
RPAREN (265) 11


Nonterminals, with rules where they appear

$accept (11)
    on left: 0
input (12)
    on left: 1 2, on right: 0 2
line (13)
    on left: 3 4, on right: 2
expr (14)
    on left: 5 6 7, on right: 4 5 6 11
term (15)
    on left: 8 9 10, on right: 5 6 7 8 9
factor (16)
    on left: 11 12, on right: 8 9 10


State 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . line

    $end     shift, and go to state 2
    NEWLINE  shift, and go to state 3
    NUMBER   shift, and go to state 4
    LPAREN   shift, and go to state 5

    line    go to state 6
    expr    go to state 7
    term    go to state 8
    factor  go to state 9


State 2

    0 $accept: input $end .

    $default  accept


State 3

    3 line: NEWLINE .

    $default  reduce using rule 3 (line)


State 4

   12 factor: NUMBER .

    $default  reduce using rule 12 (factor)


State 5

   11 factor: LPAREN . expr RPAREN

    NUMBER  shift, and go to state 4
    LPAREN  shift, and go to state 5

    expr    go to state 10
    term    go to state 8
    factor  go to state 9


State 6

    2 input: input line .

    $default  reduce using rule 2 (input)


State 7

    4 line: expr . NEWLINE
    5 expr: expr . PLUS term
    6     | expr . MINUS term

    NEWLINE  shift, and go to state 11
    PLUS     shift, and go to state 12
    MINUS    shift, and go to state 13


State 8

    7 expr: term .
    8 term: term . ASTERISK factor
    9     | term . SLASH factor

    SLASH     shift, and go to state 14
    ASTERISK  shift, and go to state 15

    $default  reduce using rule 7 (expr)


State 9

   10 term: factor .

    $default  reduce using rule 10 (term)


State 10

    5 expr: expr . PLUS term
    6     | expr . MINUS term
   11 factor: LPAREN expr . RPAREN

    PLUS    shift, and go to state 12
    MINUS   shift, and go to state 13
    RPAREN  shift, and go to state 16


State 11

    4 line: expr NEWLINE .

    $default  reduce using rule 4 (line)


State 12

    5 expr: expr PLUS . term

    NUMBER  shift, and go to state 4
    LPAREN  shift, and go to state 5

    term    go to state 17
    factor  go to state 9


State 13

    6 expr: expr MINUS . term

    NUMBER  shift, and go to state 4
    LPAREN  shift, and go to state 5

    term    go to state 18
    factor  go to state 9


State 14

    9 term: term SLASH . factor

    NUMBER  shift, and go to state 4
    LPAREN  shift, and go to state 5

    factor  go to state 19


State 15

    8 term: term ASTERISK . factor

    NUMBER  shift, and go to state 4
    LPAREN  shift, and go to state 5

    factor  go to state 20


State 16

   11 factor: LPAREN expr RPAREN .

    $default  reduce using rule 11 (factor)


State 17

    5 expr: expr PLUS term .
    8 term: term . ASTERISK factor
    9     | term . SLASH factor

    SLASH     shift, and go to state 14
    ASTERISK  shift, and go to state 15

    $default  reduce using rule 5 (expr)


State 18

    6 expr: expr MINUS term .
    8 term: term . ASTERISK factor
    9     | term . SLASH factor

    SLASH     shift, and go to state 14
    ASTERISK  shift, and go to state 15

    $default  reduce using rule 6 (expr)


State 19

    9 term: term SLASH factor .

    $default  reduce using rule 9 (term)


State 20

    8 term: term ASTERISK factor .

    $default  reduce using rule 8 (term)
